--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   url_launcher: ^6.2.6
